# connect_notion_with_clockify

./: .gitignore  connect_notion_with_clockify.sh  pyproject.toml
src/: main.py
